# libOTe-experiments

./: CMakeLists.txt
examples/ot_experiments/: ot_receiver.cpp
